# geoshape

./: .gitmodules  CMakeLists.txt  README.md
include/geoshape/: Arc.h  Arc3D.h  Bezier.h  Box.h  Circle.h  Ellipse.h  Factory.h  Line2D.h  Line3D.h  Point2D.h  Point3D.h  PointSet3D.h  Polygon.h  Polygon2D.h  Polygon3D.h  Polyline.h  Polyline2D.h  Polyline2DImpl.h  Polyline3D.h  PolylineImpl.h  Rect.h  Serialize.h  Shape.h  Shape2D.h  Shape3D.h  Sphere.h  Triangles.h  config.h  typedef.h
platform/msvc/: .gitignore
platform/msvc/projects/: geoshape.vcxproj  geoshape.vcxproj.filters  geoshape_new.vcxproj  geoshape_new.vcxproj.filters  gs_test.vcxproj
source/: Arc.cpp  Arc3D.cpp  Bezier.cpp  Box.cpp  Circle.cpp  Ellipse.cpp  Factory.cpp  Line2D.cpp  Line3D.cpp  Point2D.cpp  Point3D.cpp  PointSet3D.cpp  Polygon.cpp  Polygon2D.cpp  Polygon3D.cpp  Polyline.cpp  Polyline2D.cpp  Polyline2DImpl.cpp  Polyline3D.cpp  PolylineImpl.cpp  Rect.cpp  Serialize.cpp  Shape.cpp  Sphere.cpp  Triangles.cpp
test/: test_create.cpp  test_serialize.cpp
